# Main-private-files

./: # diamond_firewall.py  ## Configuration.txt  .gitignore  1️⃣ VISUAL POSTER LAYOUT (TEXT‑ONLY BLUEPRINT).txt  6-Tier QPPI-QKD.py  @GuardianNinja.json  AI_news_live_index.html  ATVIS Local Prototype.html  Access terms and consent.js  Additional security.md  Advanced engine.py  Anti_Apple_DNA_Lock.py  Application in factory.cs  Atom Egg Maker.html  Audit log entry.json  Authenticated shadow inventory.cs  Authorized backup bundle for Maple README.md  BACKUP_README.md  BHD – Living Black History Portal | Jarvondis University.html  Backstory data.cs  Ballot (encrypted or at least pseudonymous).json  Base Interfaces (Engine‑Agnostic).cs  Basic Operating System.html  CAPTAIN’S LOG — BOUNDARY PROTOCOL: UNSAFE FORMER ALLIES.txt  CAT_TELEPORT.py  CHIP 5–6–7–8: Tone, pacing, metaphor density.txt  CPSCS Creator Dashboard.html  Captain Tez.py  Character Creation Data (What the Player Chooses).cs  Character Factory (The Key Piece).cs  Cheetah OS risk calculator README.md  Cheetah_risk_os.html  Children's UN.json  Cinematic Mode Layout  Class selection UI.cs  Clear Voting Seal.js  Collaboration Systems  Comparative Analysis Framework for Disease & DNA Structures.py  Continuous Revolution Security Layer.py  Core data extensions.cs  (+459 more)
giga atom/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt  requirements2.txt
giga atom/notebooks/: run_all.ipynb
giga atom/tests/: test_bonding.py  test_model.py  test_simulations.py
tests/ceremonial-terrain-v1/: README.md  pyproject.toml  (+1 more)
(+212 files in other folders)
